# electron-vite-template

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  README_ZH.md  build.json  package-lock.json  package.json  test.js  tsconfig.json  update-config.json  updateConfig.json
.electron-vite/: afterPack.js  beforePack.js  build.js  build.ts  checkMirrorConfig.js  clean.js  dev-runner.js  dev-runner.ts  hot-updater-test.js  hot-updater.js  hot-updater.ts  preload.js  preload.ts  rollup.config.js  rollup.config.ts  rollup.main.config.js  rollup.preload.config.js  utils.ts  vite.config.js  vite.config.mts  vite.config.ts
.electron-vite/builderHook/: byteCodeHook.js  copyFileHook.js
.electron-vite/bytecode/: bytecode.js  electron-compiler.js  vm.js  vm_node.js
.electron-vite/bytecode/encryption/: Cargo.toml  index.d.ts  package.json
.electron-vite/bytecode/encryption/.cargo/: config.toml
.electron-vite/bytecode/encryption/src/: lib.rs
.electron-vite/devtools/: manifest.json
.electron-vite/log/: index.ts
.electron-vite/plugin/: vite-ikaros-tools.ts
.github/workflows/: Build Update.yml  Build.yml  Test.yml  build-test.yml  release.yml
.github/工作流/: release.yml
config/: dev.env.js  dev.env.ts  index.js  index.ts  prod.env.js  prod.env.ts
customTypes/: Item.d.ts  global.d.ts  preload.ts
encryption/: index.d.ts  package.json
encryption/src/: lib.rs
env/: .env  .prod.env  .sit.env  prod.env
src/: ipc.ts  preload.ts
src/ipc/: channel.ts  index.ts
static/: preload.html  webview.html  webviewPreload.js
updater/: Cargo.toml
(+73 files in other folders)
