[package]
authors = ["chenandmashiro@gmail.com"]
edition = "2021"
name = "encryption"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
